--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@ document.getElementById("quizForm").addEventListener("submit", function (e) {
     <p>${result.description.replace(/\n/g, '<br>')}</p>
   `;
 });
+console.log("スコア:", score);
 
   </script>
 </body>
