--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
       font-size: 2rem;
     }
     .question {
-      display: inline-block;
-      width: 100%;
-      background: #fff;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       margin: 1rem 0;
     }
     .question p {
       font-weight: bold;
       margin-bottom: 0.5rem;
     }
+    .options {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 0.25rem;
+    }
     .options label {
       display: block;
-      margin: 0.5rem 0;
+      margin-bottom: 0.25rem;
     }
     button {
       margin-top: 2rem;
@@ -57,38 +57,6 @@
       background-color: #ffe4ec;
       border-radius: 1rem;
     }
-
-    /* レスポンシブデザイン */
-    @media screen and (max-width: 600px) {
-      .container {
-        width: 90%;
-        padding: 1rem;
-      }
-
-      button {
-        width: 100%;
-        padding: 1rem;
-      }
-
-      .question {
-        padding: 0.5rem;
-      }
-    }
-
-    /* 進捗バー */
-    #progressBar {
-      width: 100%;
-      height: 20px;
-      margin-top: 1rem;
-      background-color: #e0e0e0;
-      border-radius: 10px;
-    }
-    #progressBar div {
-      height: 100%;
-      background-color: #ff66a5;
-      border-radius: 10px;
-      width: 0;
-    }
   </style>
 </head>
 <body>
@@ -96,7 +64,6 @@
     <h1>8タイプ診断</h1>
     <form id="quizForm">
       <div id="questions"></div>
-      <div id="progressBar"><div></div></div>
       <button type="submit">診断する</button>
     </form>
     <div class="result" id="result"></div>
@@ -121,13 +88,6 @@
       { text: "締切が近くならないと本気が出ない", axis: "JP", reverse: true },
       { text: "ToDoリストを使うのが好き", axis: "JP" }
     ];
-
-    const axisScores = {
-      EI: 0,
-      SN: 0,
-      TF: 0,
-      JP: 0
-    };
 
     const axisTypes = {
       EI: ["I", "E"],
@@ -171,58 +131,67 @@
       }
     };
 
-    // 質問をレンダリング
     const questionContainer = document.getElementById("questions");
     const labels = ["そう思わない", "ややそう思わない", "どちらともいえない", "ややそう思う", "そう思う"];
+
     questions.forEach((q, i) => {
       const div = document.createElement("div");
       div.className = "question";
       div.innerHTML = `
         <p>${i + 1}. ${q.text}</p>
         <div class="options">
-          ${labels.map((label, index) => `
-            <label><input type="radio" name="q${i}" value="${index + 1}" required> ${label}</label>
+          ${labels.map((label, idx) => `
+            <label><input type="radio" name="q${i}" value="${idx + 1}" required> ${label}</label>
           `).join('')}
         </div>
       `;
       questionContainer.appendChild(div);
     });
 
-    // 進捗バーの更新
-    const updateProgress = (currentQuestion) => {
-      const progress = (currentQuestion / questions.length) * 100;
-      document.querySelector("#progressBar div").style.width = progress + "%";
-    };
+    document.getElementById("quizForm").addEventListener("submit", function (e) {
+      e.preventDefault();
 
-  // 診断ロジック
-document.getElementById("quizForm").addEventListener("submit", function (e) {
-  e.preventDefault();
+      const score = { EI: 0, SN: 0, TF: 0, JP: 0 };
+      const axisAverage = {};
 
-  const score = { EI: 0, SN: 0, TF: 0, JP: 0 };
+      questions.forEach((q, i) => {
+        const val = parseInt(document.querySelector(`input[name=q${i}]:checked`).value);
+        const adjusted = q.reverse ? 6 - val : val;
+        score[q.axis] += adjusted;
+      });
 
-  // スコア計算
-  questions.forEach((q, i) => {
-    const val = parseInt(document.querySelector(`input[name=q${i}]:checked`).value);
-    const adjusted = q.reverse ? 6 - val : val;
-    score[q.axis] += adjusted;
-  });
+      Object.keys(score).forEach(axis => {
+        axisAverage[axis] = score[axis] / 4;
+      });
 
-  // 軸ごとの平均スコアを求める
-  let resultType = '';
-  Object.keys(score).forEach(axis => {
-    const avg = score[axis] / 4;  // 4つの質問の平均を計算
-    resultType += avg >= 3 ? axisTypes[axis][1] : axisTypes[axis][0];  // 3以上なら後者、そうでなければ前者
-  });
+      let resultType = "";
+      Object.keys(axisAverage).forEach(currentAxis => {
+        const avg = axisAverage[currentAxis];
+        if (avg > 3) {
+          resultType += axisTypes[currentAxis][1];
+        } else if (avg < 3) {
+          resultType += axisTypes[currentAxis][0];
+        } else {
+          let tendencyScore = 0;
+          Object.keys(axisAverage).forEach(otherAxis => {
+            if (otherAxis === currentAxis) return;
+            const otherAvg = axisAverage[otherAxis];
+            if (otherAvg > 3) tendencyScore += 1;
+            else if (otherAvg < 3) tendencyScore -= 1;
+          });
+          resultType += tendencyScore >= 0
+            ? axisTypes[currentAxis][1]
+            : axisTypes[currentAxis][0];
+        }
+      });
 
-  // 診断結果を表示
-  const result = results[resultType] || { type: "タイプ不明", description: "結果が見つかりませんでした。" };
-  document.getElementById("result").innerHTML = `
-    <h2>${result.type}</h2>
-    <p>${result.description.replace(/\n/g, '<br>')}</p>
-  `;
-});
-console.log("スコア:", score);
+      const result = results[resultType] || { type: "タイプ不明", description: "結果が見つかりませんでした。" };
 
+      document.getElementById("result").innerHTML = `
+        <h2>${result.type}</h2>
+        <p>${result.description.replace(/\n/g, '<br>')}</p>
+      `;
+    });
   </script>
 </body>
 </html>
