--- a/index.html
+++ b/index.html
@@ -3,58 +3,171 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>6タイプ性格診断</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    .question { margin-bottom: 20px; }
-    .result { font-size: 1.2em; margin-top: 30px; font-weight: bold; }
+  <title>6タイプ性格診断</title>  
+<style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+    .logo {
+      height: 40px;
+    }
+    h1 {
+      text-align: center;
+      color: #444;
+    }
+    .question {
+      background: #fff;
+      border: 1px solid #ddd;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      margin-bottom: 20px;
+    }
+    label {
+      display: block;
+      margin: 6px 0;
+      cursor: pointer;
+    }
+    button {
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      padding: 10px 25px;
+      font-size: 1em;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 20px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+    .result {
+      font-size: 1.4em;
+      margin-top: 30px;
+      font-weight: bold;
+      text-align: center;
+      background-color: #ffffff;
+      border: 2px solid #4caf50;
+      border-radius: 16px;
+      padding: 25px;
+      max-width: 500px;
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      color: #2e7d32;
+    }
   </style>
+
 </head>
 <body>
+ <header>
+  <div></div>
+  <h2 class="logo">IBJ Matching</h2>
+</header>
+
+</header>
+
   <h1>6タイプ性格診断</h1>
+<p style="text-align: center; color: #666; font-size: 0.95em; line-height: 1.6;">
+  ※すべての質問にお答えください。<br>
+  ※パーティー開始までに回答をお願いします。
+</p>
   <form id="quizForm">
     <div class="question">
-      1. 人の気持ちを察するのが得意だと感じる
-      <input type="range" name="q1" min="1" max="5" value="3">
+      <p>1. 人の気持ちを察するのが得意だと感じる</p>
+      <label><input type="radio" name="q1" value="1" required> 全くそう思わない</label>
+      <label><input type="radio" name="q1" value="2"> あまりそう思わない</label>
+      <label><input type="radio" name="q1" value="3"> どちらともいえない</label>
+      <label><input type="radio" name="q1" value="4"> ややそう思う</label>
+      <label><input type="radio" name="q1" value="5"> とてもそう思う</label>
     </div>
     <div class="question">
-      2. 恋愛にはロマンを求める方だ
-      <input type="range" name="q2" min="1" max="5" value="3">
+      <p>2. 恋愛にはロマンを求める方だ</p>
+      <label><input type="radio" name="q2" value="1" required> 全くそう思わない</label>
+      <label><input type="radio" name="q2" value="2"> あまりそう思わない</label>
+      <label><input type="radio" name="q2" value="3"> どちらともいえない</label>
+      <label><input type="radio" name="q2" value="4"> ややそう思う</label>
+      <label><input type="radio" name="q2" value="5"> とてもそう思う</label>
     </div>
     <div class="question">
-      3. 落ち着いていて、冷静な判断ができる方だ
-      <input type="range" name="q3" min="1" max="5" value="3">
+      <p>3. 落ち着いていて、冷静な判断ができる方だ</p>
+      <label><input type="radio" name="q3" value="1" required> 全くそう思わない</label>
+      <label><input type="radio" name="q3" value="2"> あまりそう思わない</label>
+      <label><input type="radio" name="q3" value="3"> どちらともいえない</label>
+      <label><input type="radio" name="q3" value="4"> ややそう思う</label>
+      <label><input type="radio" name="q3" value="5"> とてもそう思う</label>
     </div>
     <div class="question">
-      4. 行動力があり、じっとしているのが苦手だ
-      <input type="range" name="q4" min="1" max="5" value="3">
+      <p>4. 行動力があり、じっとしているのが苦手だ</p>
+      <label><input type="radio" name="q4" value="1" required> 全くそう思わない</label>
+      <label><input type="radio" name="q4" value="2"> あまりそう思わない</label>
+      <label><input type="radio" name="q4" value="3"> どちらともいえない</label>
+      <label><input type="radio" name="q4" value="4"> ややそう思う</label>
+      <label><input type="radio" name="q4" value="5"> とてもそう思う</label>
     </div>
     <div class="question">
-      5. 自分なりの世界観を持っていると言われる
-      <input type="range" name="q5" min="1" max="5" value="3">
+      <p>5. 自分なりの世界観を持っていると言われる</p>
+      <label><input type="radio" name="q5" value="1" required> 全くそう思わない</label>
+      <label><input type="radio" name="q5" value="2"> あまりそう思わない</label>
+      <label><input type="radio" name="q5" value="3"> どちらともいえない</label>
+      <label><input type="radio" name="q5" value="4"> ややそう思う</label>
+      <label><input type="radio" name="q5" value="5"> とてもそう思う</label>
     </div>
     <div class="question">
-      6. 自然と周囲を引っ張ることが多い
-      <input type="range" name="q6" min="1" max="5" value="3">
+      <p>6. 自然と周囲を引っ張ることが多い</p>
+      <label><input type="radio" name="q6" value="1" required> 全くそう思わない</label>
+      <label><input type="radio" name="q6" value="2"> あまりそう思わない</label>
+      <label><input type="radio" name="q6" value="3"> どちらともいえない</label>
+      <label><input type="radio" name="q6" value="4"> ややそう思う</label>
+      <label><input type="radio" name="q6" value="5"> とてもそう思う</label>
     </div>
     <div class="question">
-      7. 他人の話をよく聞くタイプだ
-      <input type="range" name="q7" min="1" max="5" value="3">
+      <p>7. 他人の話をよく聞くタイプだ</p>
+      <label><input type="radio" name="q7" value="1" required> 全くそう思わない</label>
+      <label><input type="radio" name="q7" value="2"> あまりそう思わない</label>
+      <label><input type="radio" name="q7" value="3"> どちらともいえない</label>
+      <label><input type="radio" name="q7" value="4"> ややそう思う</label>
+      <label><input type="radio" name="q7" value="5"> とてもそう思う</label>
     </div>
     <div class="question">
-      8. 愛情表現はストレートにしたい
-      <input type="range" name="q8" min="1" max="5" value="3">
+      <p>8. 愛情表現はストレートにしたい</p>
+      <label><input type="radio" name="q8" value="1" required> 全くそう思わない</label>
+      <label><input type="radio" name="q8" value="2"> あまりそう思わない</label>
+      <label><input type="radio" name="q8" value="3"> どちらともいえない</label>
+      <label><input type="radio" name="q8" value="4"> ややそう思う</label>
+      <label><input type="radio" name="q8" value="5"> とてもそう思う</label>
     </div>
     <div class="question">
-      9. 感情に流されにくく、理論的に考える
-      <input type="range" name="q9" min="1" max="5" value="3">
+      <p>9. 感情に流されにくく、理論的に考える</p>
+      <label><input type="radio" name="q9" value="1" required> 全くそう思わない</label>
+      <label><input type="radio" name="q9" value="2"> あまりそう思わない</label>
+      <label><input type="radio" name="q9" value="3"> どちらともいえない</label>
+      <label><input type="radio" name="q9" value="4"> ややそう思う</label>
+      <label><input type="radio" name="q9" value="5"> とてもそう思う</label>
     </div>
     <div class="question">
-      10. チャレンジ精神がある
-      <input type="range" name="q10" min="1" max="5" value="3">
+      <p>10. チャレンジ精神がある</p>
+      <label><input type="radio" name="q10" value="1" required> 全くそう思わない</label>
+      <label><input type="radio" name="q10" value="2"> あまりそう思わない</label>
+      <label><input type="radio" name="q10" value="3"> どちらともいえない</label>
+      <label><input type="radio" name="q10" value="4"> ややそう思う</label>
+      <label><input type="radio" name="q10" value="5"> とてもそう思う</label>
     </div>
     <button type="submit">診断する</button>
   </form>
+
 
   <div class="result" id="result"></div>
 
@@ -88,10 +201,9 @@
         leader: "リーダー型"
       };
 
-      // 最大スコアを持つタイプを取得（同点処理含む）
       let maxScore = Math.max(...Object.values(scores));
       let topTypes = Object.keys(scores).filter(type => scores[type] === maxScore);
-      let resultType = topTypes.sort()[0]; // 同点時はアルファベット順で安定
+      let resultType = topTypes.sort()[0];
 
       document.getElementById("result").textContent = `あなたのタイプは「${typeNames[resultType]}」です！`;
     });
